--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,46 @@
 version: "3.8"
 
 services:
+  traefik:
+    image: traefik:latest
+    container_name: traefik
+    restart: unless-stopped
+    command:
+      - --providers.docker=true
+      - --providers.docker.exposedbydefault=false
+      - --entrypoints.web.address=:80
+      - --entrypoints.websecure.address=:443
+      - --entrypoints.web.http.redirections.entrypoint.to=websecure
+      - --entrypoints.web.http.redirections.entrypoint.scheme=https
+      - --certificatesresolvers.myresolver.acme.httpchallenge=true
+      - --certificatesresolvers.myresolver.acme.httpchallenge.entrypoint=web
+      - --certificatesresolvers.myresolver.acme.email=${ACME_EMAIL:-your-email@example.com}
+      - --certificatesresolvers.myresolver.acme.storage=/letsencrypt/acme.json
+      - --api=true
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./letsencrypt:/letsencrypt
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+    networks:
+      - web
+
   web:
     build:
       context: .
       dockerfile: Dockerfile
-    restart: always
-    ports:
-      - "3000:3000"
+    container_name: betterhomepage
+    restart: unless-stopped
     environment:
       - NODE_ENV=production
+      - DOMAIN=${DOMAIN:-localhost}
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.web.rule=Host(`${DOMAIN:-localhost}`) || Host(`www.${DOMAIN:-localhost}`)"
+      - "traefik.http.routers.web.entrypoints=websecure"
+      - "traefik.http.routers.web.tls.certresolver=myresolver"
+      - "traefik.http.services.web.loadbalancer.server.port=3000"
     healthcheck:
       test:
         [
@@ -24,3 +55,9 @@ services:
       timeout: 10s
       retries: 3
       start_period: 30s
+    networks:
+      - web
+
+networks:
+  web:
+    driver: bridge
