--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,9 @@ services:
       - --certificatesresolvers.myresolver.acme.email=${ACME_EMAIL:-your-email@example.com}
       - --certificatesresolvers.myresolver.acme.storage=/letsencrypt/acme.json
       - --api=true
+      - --log.level=DEBUG
+      - --global.checkNewVersion=false
+      - --global.sendAnonymousUsage=false
     ports:
       - "80:80"
       - "443:443"
@@ -35,6 +38,7 @@ services:
     environment:
       - NODE_ENV=production
       - DOMAIN=${DOMAIN:-localhost}
+      - NEXT_PUBLIC_APP_URL=https://${DOMAIN:-localhost}
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.web.rule=Host(`${DOMAIN:-localhost}`) || Host(`www.${DOMAIN:-localhost}`)"
