--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.8"
-
 services:
   traefik:
     image: traefik:latest
@@ -14,35 +12,14 @@ services:
       - --entrypoints.web.http.redirections.entrypoint.scheme=https
       - --certificatesresolvers.myresolver.acme.httpchallenge=true
       - --certificatesresolvers.myresolver.acme.httpchallenge.entrypoint=web
-      - --certificatesresolvers.myresolver.acme.email=${ACME_EMAIL:-your-email@example.com}
+      - --certificatesresolvers.myresolver.acme.email=rywoox@gmail.com
       - --certificatesresolvers.myresolver.acme.storage=/letsencrypt/acme.json
       - --api=true
-      - --api.dashboard=true
-      - --log.level=DEBUG
-      - --accesslog=true
-      - --accesslog.filepath=/var/log/traefik/access.log
-      - --global.checkNewVersion=false
-      - --global.sendAnonymousUsage=false
-    ports:
-      - "80:80"
-      - "443:443"
     volumes:
       - ./letsencrypt:/letsencrypt
-      - ./logs/traefik:/var/log/traefik
       - /var/run/docker.sock:/var/run/docker.sock:ro
     networks:
       - web
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.traefik-dashboard.rule=Host(`${DOMAIN:-localhost}`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api/dashboard`))"
-      - "traefik.http.routers.traefik-dashboard.service=api@internal"
-      - "traefik.http.routers.traefik-dashboard.entrypoints=websecure"
-      - "traefik.http.routers.traefik-dashboard.tls.certresolver=myresolver"
-      - "traefik.http.routers.traefik-dashboard.middlewares=traefik-auth"
-      - "traefik.http.middlewares.traefik-auth.basicauth.users=admin:$$apr1$$lOz5ELjB$$QCiO7NJ.jEHh5Y5CygjRp/" # Username: admin, Password: admin
-      - "traefik.http.middlewares.traefik-compression.compress=true"
-      - "traefik.http.routers.traefik-dashboard.middlewares=traefik-compression,traefik-auth"
-      - "traefik.http.routers.traefik-dashboard.priority=100"
 
   web:
     build:
@@ -57,9 +34,8 @@ services:
       - DOMAIN=${DOMAIN:-localhost}
       - NEXT_PUBLIC_APP_URL=https://${DOMAIN:-localhost}
       - PORT=3000
-      - HOSTNAME=0.0.0.0
-    expose:
-      - 3000
+    ports:
+      - "3000:3000"
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.web.rule=Host(`${DOMAIN:-localhost}`) || Host(`www.${DOMAIN:-localhost}`)"
@@ -87,7 +63,5 @@ services:
 
 networks:
   web:
-    name: web
-    external: false
     driver: bridge
     enable_ipv6: true
