--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
     networks:
       - web
 
-  web:
+  betterhomepage:
     build:
       context: .
       dockerfile: Dockerfile
@@ -34,19 +34,17 @@ services:
       - traefik
     environment:
       - NODE_ENV=production
-      - DOMAIN=${DOMAIN:-localhost}
-      - NEXT_PUBLIC_APP_URL=https://${DOMAIN:-localhost}
+      - DOMAIN=${DOMAIN}
+      - NEXT_PUBLIC_APP_URL=https://${DOMAIN}
       - PORT=3000
     ports:
       - "3000:3000"
     labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.web.rule=Host(`${DOMAIN:-localhost}`) || Host(`www.${DOMAIN:-localhost}`)"
-      - "traefik.http.routers.web.entrypoints=websecure"
-      - "traefik.http.routers.web.tls.certresolver=myresolver"
-      - "traefik.http.services.web.loadbalancer.server.port=3000"
-      - "traefik.http.middlewares.web-compression.compress=true"
-      - "traefik.http.routers.web.middlewares=web-compression"
+    - "traefik.enable=true"
+      - "traefik.http.routers.betterhomepage.rule=Host(`home.rywoox.com`) || Host(`www.home.rywoox.com`)"
+      - "traefik.http.routers.betterhomepage.entrypoints=websecure"
+      - "traefik.http.routers.betterhomepage.tls.certresolver=myresolver"
+      - "traefik.http.services.betterhomepage.loadbalancer.server.port=3000"
     healthcheck:
       test:
         [
