--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,25 @@
 services:
   traefik:
-    image: traefik:latest
+    image: traefik:v2.10
     container_name: traefik
     restart: unless-stopped
-    command:
-      - --providers.docker=true
-      - --providers.docker.exposedbydefault=false
-      - --entrypoints.web.address=:80
-      - --entrypoints.websecure.address=:443
-      - --entrypoints.web.http.redirections.entrypoint.to=websecure
-      - --entrypoints.web.http.redirections.entrypoint.scheme=https
-      - --certificatesresolvers.myresolver.acme.httpchallenge=true
-      - --certificatesresolvers.myresolver.acme.httpchallenge.entrypoint=web
-      - --certificatesresolvers.myresolver.acme.email=rywoox@gmail.com
-      - --certificatesresolvers.myresolver.acme.storage=/letsencrypt/acme.json
-      - --api=true
     ports:
       - "80:80"
       - "443:443"
+      - "8080:8080" # Traefik dashboard
     volumes:
-      - ./letsencrypt:/letsencrypt
       - /var/run/docker.sock:/var/run/docker.sock:ro
+      - ./traefik/config:/etc/traefik
+    command:
+      - "--api.insecure=true" # Dashboard available without authentication (for development)
+      - "--providers.docker=true"
+      - "--providers.docker.exposedbydefault=false"
+      - "--entrypoints.web.address=:80"
+      - "--entrypoints.websecure.address=:443"
+      - "--certificatesresolvers.myresolver.acme.httpchallenge=true"
+      - "--certificatesresolvers.myresolver.acme.httpchallenge.entrypoint=web"
+      - "--certificatesresolvers.myresolver.acme.email=your-email@example.com" # Replace with your email
+      - "--certificatesresolvers.myresolver.acme.storage=/etc/traefik/acme.json"
     networks:
       - web
 
@@ -32,17 +31,9 @@ services:
     restart: unless-stopped
     environment:
       - NODE_ENV=production
-      - DOMAIN=${DOMAIN}
-      - NEXT_PUBLIC_APP_URL=https://${DOMAIN}
       - PORT=3000
-    ports:
-      - "3000:3000"
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.betterhomepage.rule=Host(`home.rywoox.com`) || Host(`www.home.rywoox.com`)"
-      - "traefik.http.routers.betterhomepage.entrypoints=websecure"
-      - "traefik.http.routers.betterhomepage.tls.certresolver=myresolver"
-      - "traefik.http.services.betterhomepage.loadbalancer.server.port=3000"
+    # ports:  # Commented out direct port exposure as Traefik will handle this
+    #   - "3000:3000"
     healthcheck:
       test:
         [
@@ -59,6 +50,16 @@ services:
       start_period: 30s
     networks:
       - web
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.betterhomepage.rule=Host(`home.rywoox.com`)"
+      - "traefik.http.routers.betterhomepage.entrypoints=websecure"
+      - "traefik.http.routers.betterhomepage.tls.certresolver=myresolver"
+      - "traefik.http.services.betterhomepage.loadbalancer.server.port=3000"
+      - "traefik.http.routers.betterhomepage-http.rule=Host(`home.rywoox.com`)"
+      - "traefik.http.routers.betterhomepage-http.entrypoints=web"
+      - "traefik.http.routers.betterhomepage-http.middlewares=redirecthttps"
+      - "traefik.http.middlewares.redirecthttps.redirectscheme.scheme=https"
 
 networks:
   web:
