--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
       - "--entrypoints.websecure.address=:443"
       - "--certificatesresolvers.myresolver.acme.httpchallenge=true"
       - "--certificatesresolvers.myresolver.acme.httpchallenge.entrypoint=web"
-      - "--certificatesresolvers.myresolver.acme.email=your-email@example.com" # Replace with your email
+      - "--certificatesresolvers.myresolver.acme.email=rywoox@gmail.com" # Replace with your actual email
       - "--certificatesresolvers.myresolver.acme.storage=/etc/traefik/acme.json"
     networks:
       - web
@@ -32,8 +32,8 @@ services:
     environment:
       - NODE_ENV=production
       - PORT=3000
-    # ports:  # Commented out direct port exposure as Traefik will handle this
-    #   - "3000:3000"
+    ports: # Uncomment for direct testing
+      - "3000:3000"
     healthcheck:
       test:
         [
@@ -60,6 +60,8 @@ services:
       - "traefik.http.routers.betterhomepage-http.entrypoints=web"
       - "traefik.http.routers.betterhomepage-http.middlewares=redirecthttps"
       - "traefik.http.middlewares.redirecthttps.redirectscheme.scheme=https"
+      - "traefik.http.routers.betterhomepage.middlewares=strip-prefix"
+      - "traefik.http.middlewares.strip-prefix.stripprefix.prefixes=/"
 
 networks:
   web:
