--- a/package.json
+++ b/package.json
@@ -34,10 +34,12 @@
     "lucide-react": "^0.475.0",
     "motion": "^12.4.3",
     "next": "15.2.0-canary.56",
+    "next-themes": "^0.4.4",
     "openmeteo": "^1.1.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "use-debounce": "^10.0.4",
